--- a/devfile.yaml
+++ b/devfile.yaml
@@ -4,7 +4,7 @@ metadata:
 components:
   - name: tools
     container:
-      image: quay.io/jnyilimbibi/devspaces-extended-udi:3.12g
+      image: quay.io/jnyilimbibi/devspaces-extended-udi:3.13
       memoryRequest: 1Gi
       memoryLimit: 4Gi
       cpuLimit: 4000m
