--- a/usecase5-xml-to-json/xml-to-json-mqtt.camel.yaml
+++ b/usecase5-xml-to-json/xml-to-json-mqtt.camel.yaml
@@ -12,6 +12,7 @@
       steps:
         - to:
             id: to-1078
+            description: Log XML
             uri: log:minio
             parameters:
               multiline: true
@@ -21,18 +22,21 @@
               showProperties: true
         - setProperty:
             id: setProperty-2413
+            description: Save XML
             expression:
               simple:
                 expression: ${body}
             name: inputXml
         - setHeader:
             id: setHeader-4160
+            description: Save Filename
             expression:
               simple:
                 expression: ${header.CamelMinioObjectName}
             name: filename
         - to:
             id: to-3356
+            description: Generate TEXTBLOC
             uri: xslt:xml-to-textblock.xslt
             parameters: {}
         - log:
@@ -40,25 +44,26 @@
             message: "${routeId} >>> Generated textblock: ${body}"
         - setHeader:
             id: setHeader-1851
+            description: Save TEXTBLOC
             expression:
               simple:
                 expression: ${body}
             name: textblock
         - setBody:
             id: setBody-4922
+            description: Retrieve XML
             expression:
               simple:
                 expression: ${exchangeProperty.inputXml}
         - to:
             id: to-2701
+            description: Generate JSON
             uri: xslt:xml-to-json.xslt
             parameters: {}
         - log:
             id: log-2473
-            message: "${routeId} >>> Generated JSON: ${body}"
-        - log:
-            id: log-3225
-            message: ${routeId} >>> Publishing to SMRS/RETURN/CREJOB/BoostLocker MQTT Topic
+            message: "${routeId} >>> Generated JSON: ${body}. Publishing to
+              SMRS/RETURN/CREJOB/BoostLocker MQTT Topic"
         - to:
             id: to-2503
             uri: paho-mqtt5:SMRS/RETURN/CREJOB/BoostLocker
