--- a/usecase2-db/postgresql-to-mqtt-and-file.camel.yaml
+++ b/usecase2-db/postgresql-to-mqtt-and-file.camel.yaml
@@ -13,13 +13,11 @@
         useIterator: true
       steps:
         - to:
-            id: to-2112
-            uri: log:Logger
+            id: to-3718
+            uri: log:sql
             parameters:
               multiline: true
-              showAllProperties: true
-              showHeaders: true
-              showProperties: true
+              showAll: true
         - setHeader:
             id: setHeader-3753
             description: Extract Id
@@ -27,50 +25,65 @@
               simple:
                 expression: ${body[id]}
             name: id
-        - transform:
-            id: transform-1804
-            description: Generate JSON
-            expression:
-              simple:
-                expression: '{ "id": ${body[id]}, "timestamp": "${body[timestamp]}",
-                  "accountnumber": "${body[accountnumber]}", "amount":
-                  ${body[amount]} }'
-                trim: true
-        - log:
-            id: log-1967
-            message: Generated JSON for record [${header.id}] => ${body}
-        - multicast:
-            id: multicast-2720
+        - doTry:
+            id: doTry-1602
             steps:
-              - to:
-                  id: to-7135
-                  description: Call write-to-file
-                  uri: direct:write-to-file
-                  parameters: {}
-              - to:
-                  id: to-4552
-                  description: Call write-to-mqtt
-                  uri: direct:write-to-mqtt
-                  parameters: {}
-            parallelProcessing: true
-        - to:
-            id: to-1624
-            description: Delete record
-            uri: sql:delete from transactions where id = :#${header.id}
-            parameters:
-              dataSource: "#PostgresqlDataSource"
-        - log:
-            id: log-3610
-            message: Record [${header.id}] processing DONE. Record [${header.id}] has been
-              removed from DB.
+              - transform:
+                  id: transform-1804
+                  description: Generate JSON
+                  expression:
+                    simple:
+                      expression: '{ "id": ${body[id]}, "timestamp": "${body[timestamp]}",
+                        "accountnumber": "${body[accountnumber]}", "amount":
+                        ${body[amount]} }'
+                      trim: true
+              - log:
+                  id: log-1967
+                  message: Generated JSON for record [${header.id}] => ${body}
+              - multicast:
+                  id: multicast-2720
+                  steps:
+                    - to:
+                        id: to-7135
+                        description: Call write-to-file
+                        uri: direct:write-to-file
+                        parameters: {}
+                    - to:
+                        id: to-4552
+                        description: Call write-to-mqtt
+                        uri: direct:write-to-mqtt
+                        parameters: {}
+                  parallelProcessing: true
+            doCatch:
+              - id: doCatch-3854
+                steps:
+                  - log:
+                      id: log-8499
+                      description: Log Exception
+                      loggingLevel: ERROR
+                      message: "Caught error: ${exception.message}"
+                exception:
+                  - java.lang.Exception
+            doFinally:
+              id: doFinally-3854
+              steps:
+                - to:
+                    id: to-1624
+                    description: Delete record
+                    uri: sql:delete from transactions where id = :#${header.id}
+                    parameters:
+                      dataSource: "#PostgresqlDataSource"
+                - log:
+                    id: log-3610
+                    message: Record [${header.id}] has been removed from DB.
 - beans:
     - name: PostgresqlDataSource
       properties:
         databaseName: "{{db.name:transactions}}"
         password: "{{db.password:P@ssw0rd}}"
         portNumber: "{{db.port:5432}}"
-        serverName: "{{db.host:postgres}}"
-        user: "{{db.user:postgres}}"
+        serverName: "{{db.host:localhost}}"
+        user: "{{db.user:user}}"
       type: org.postgresql.ds.PGSimpleDataSource
 - route:
     id: write-to-file
