--- a/usecase7-csv-to-json/csv-to-json-mqtt.camel.yaml
+++ b/usecase7-csv-to-json/csv-to-json-mqtt.camel.yaml
@@ -20,86 +20,98 @@
               showAllProperties: true
               showHeaders: true
               showProperties: true
-        - unmarshal:
-            id: unmarshal-csv
-            description: CSV to List<Map>
-            csv:
-              delimiter: ;
-              ignoreHeaderCase: true
-              trim: true
-              useMaps: true
-        - to:
-            id: to-Exchange
-            description: Log List<Map>
-            uri: log:unmarshal
-            parameters:
-              multiline: true
-              showAll: true
-              showAllProperties: true
-              showHeaders: true
-              showProperties: true
-        - split:
-            id: split-csv
-            expression:
-              simple:
-                expression: ${body}
-        - log:
-            id: log-1488
-            message: "${routeId} >>> Processing record [Id:
-              ${body[Nummer]}/${body[Subnummer]},  Costcenter:
-              ${body[Standort]}, Status: ${body[Status]}]"
-        - choice:
-            id: choice-2440
-            otherwise:
-              id: otherwise-7350
-              steps:
-                - to:
-                    id: to-1265
-                    description: Call csv-to-json-ko
-                    uri: direct:csvToJsonKO
-                    parameters: {}
-                - setHeader:
-                    id: setHeader-5847
-                    description: CREJOB topic
-                    expression:
-                      constant:
-                        expression: IPS/IN/CREJOB/RONDO
-                        trim: true
-                    name: CamelPahoMqtt5OverrideTopic
-            when:
-              - id: when-9549
-                description: Status == OK
-                steps:
-                  - to:
-                      id: to-1021
-                      description: Call csv-to-json-ok
-                      uri: direct:csvToJsonOK
-                      parameters: {}
-                  - setHeader:
-                      id: setHeader-2100
-                      description: RONDO topic
+        - doTry:
+            id: doTry-3542
+            steps:
+              - unmarshal:
+                  id: unmarshal-csv
+                  description: CSV to List<Map>
+                  csv:
+                    delimiter: ;
+                    ignoreHeaderCase: true
+                    trim: true
+                    useMaps: true
+              - to:
+                  id: to-Exchange
+                  description: Log List<Map>
+                  uri: log:unmarshal
+                  parameters:
+                    multiline: true
+                    showAll: true
+                    showAllProperties: true
+                    showHeaders: true
+                    showProperties: true
+              - split:
+                  id: split-csv
+                  expression:
+                    simple:
+                      expression: ${body}
+              - log:
+                  id: log-1488
+                  message: "${routeId} >>> Processing record [Id:
+                    ${body[Nummer]}/${body[Subnummer]},  Costcenter:
+                    ${body[Standort]}, Status: ${body[Status]}]"
+              - choice:
+                  id: choice-2440
+                  otherwise:
+                    id: otherwise-7350
+                    steps:
+                      - to:
+                          id: to-1265
+                          description: Call csv-to-json-ko
+                          uri: direct:csvToJsonKO
+                          parameters: {}
+                      - setHeader:
+                          id: setHeader-5847
+                          description: CREJOB topic
+                          expression:
+                            constant:
+                              expression: IPS/IN/CREJOB/RONDO
+                              trim: true
+                          name: CamelPahoMqtt5OverrideTopic
+                  when:
+                    - id: when-9549
+                      description: Status == OK
+                      steps:
+                        - to:
+                            id: to-1021
+                            description: Call csv-to-json-ok
+                            uri: direct:csvToJsonOK
+                            parameters: {}
+                        - setHeader:
+                            id: setHeader-2100
+                            description: RONDO topic
+                            expression:
+                              constant:
+                                expression: IPS/IN/RONDO/DOCURL
+                                trim: true
+                            name: CamelPahoMqtt5OverrideTopic
                       expression:
-                        constant:
-                          expression: IPS/IN/RONDO/DOCURL
-                          trim: true
-                      name: CamelPahoMqtt5OverrideTopic
-                expression:
-                  simple:
-                    expression: ${body[Status]} == "OK"
-        - log:
-            id: log-3225
-            message: ${routeId} >>> Publishing to ${header.CamelPahoMqtt5OverrideTopic} MQTT
-              Topic
-        - to:
-            id: to-2503
-            uri: paho-mqtt5:dummy
-            parameters:
-              brokerUrl: "{{broker.url:ssl://amq-ssl-broker-all-0-svc-rte-amq7-broker-cluster\
-                .apps.ocp4.jnyilimb.eu:443}}"
-              httpsHostnameVerificationEnabled: false
-              password: "{{broker.password:P@ssw0rd}}"
-              userName: "{{broker.user:csv-to-json-mqtt}}"
-            pattern: InOnly
+                        simple:
+                          expression: ${body[Status]} == "OK"
+              - log:
+                  id: log-3225
+                  message: ${routeId} >>> Publishing to ${header.CamelPahoMqtt5OverrideTopic} MQTT
+                    Topic
+              - to:
+                  id: to-2503
+                  uri: paho-mqtt5:dummy
+                  parameters:
+                    brokerUrl: "{{broker.url:ssl://amq-ssl-broker-all-0-svc-rte-amq7-broker-cluster\
+                      .apps.ocp4.jnyilimb.eu:443}}"
+                    httpsHostnameVerificationEnabled: false
+                    password: "{{broker.password:P@ssw0rd}}"
+                    userName: "{{broker.user:csv-to-json-mqtt}}"
+                  pattern: InOnly
+            doCatch:
+              - id: doCatch-2589
+                steps:
+                  - log:
+                      id: log-2511
+                      description: Log Exception
+                      message: "Caught error: ${exception.message}"
+                exception:
+                  - java.lang.NullPointerException
 - route:
     id: csv-to-json-ok
     from:
